--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <div class="container">
         <h1>Twitch-multi-live-streaming</h1>
-        <h2>Live stream multiple twitch streams at once.</h2>
+        <h2>View multiple twitch streams at once.</h2>
 
         <section id="downloads">
           <a href="https://github.com/cryancaire/Twitch-Multi-Live-Streaming/zipball/master" class="btn">Download as .zip</a>
@@ -29,29 +29,30 @@
     <div class="container">
       <section id="main_content">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome" class="anchor" href="#welcome" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>This project is a very easy to use viewer for multiple live streams simultaneously. The viewer embeds the HTML5 Twitch stream or streams of the user(s) you wish to view.</p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="setup" class="anchor" href="#setup" aria-hidden="true"><span class="octicon octicon-link"></span></a>Setup</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<ol>
+<li>Open (./index.php) in your favorite text editor and find the lines below:
+<code>//modify this -- put whatever Twitch usernames you want here.
+$channels="cryancaire,huevos74,sobuto,chuckdatruc7";</code>
+</li>
+<li>Adjust the value of $channels to the desired twitch username(s).</li>
+<li>Upload both of the files (./index.php, ./setup.php) a directory on your server.</li>
+<li>Once uploaded, navigate to index.php (<a href="http://yourdomain.com/livestream/index.php">http://yourdomain.com/livestream/index.php</a>) and you will see the stream(s) and chat window(s) of your desired twitch user(s).</li>
+</ol>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<h2>
+<a id="advanced-setup" class="anchor" href="#advanced-setup" aria-hidden="true"><span class="octicon octicon-link"></span></a>Advanced Setup</h2>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>You can use (./setup.php) to customize the streams and sizes of those streams on a one-time (or more if you save the link) basis.
+1. Navigate to setup.php (<a href="http://yourdomain.com/livestream/setup.php">http://yourdomain.com/livestream/setup.php</a>)
+2. Enter the name(s) of the twitch stream(s) you wish to view. (Comma separate for more than one.)
+3. Navigate to the generated link. (Your browser should automatically open to the generated link.)</p>
       </section>
     </div>
 
