Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@ $channels="cryancaire,huevos74,sobuto,chuckdatruc7";</code>
 <h3>
 <a id="advanced-setup" class="anchor" href="#advanced-setup" aria-hidden="true"><span class="octicon octicon-link"></span></a>Advanced Setup</h3>
 
-<p>You can use (./setup.php) to customize the streams and sizes of those streams on a one-time (or more if you save the link) basis.
-1. Navigate to setup.php (<a href="http://yourdomain.com/livestream/setup.php">http://yourdomain.com/livestream/setup.php</a>)
-2. Enter the name(s) of the twitch stream(s) you wish to view. (Comma separate for more than one.)
+<p>You can use (./setup.php) to customize the streams and sizes of those streams on a one-time (or more if you save the link) basis.<br>
+1. Navigate to setup.php (<a href="http://yourdomain.com/livestream/setup.php">http://yourdomain.com/livestream/setup.php</a>)<br>
+2. Enter the name(s) of the twitch stream(s) you wish to view. (Comma separate for more than one.)<br>
 3. Navigate to the generated link. (Your browser should automatically open to the generated link.)</p>
       </section>
     </div>
